bundle/01.jumpserver/render/jumpserver/templates/web/service-web.yaml
---
# Source: jumpserver/templates/web/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: "jumpserver-jms-web"
  labels:
    app.kubernetes.io/name: jumpserver
    helm.sh/chart: jumpserver-v4.3.1
    app.kubernetes.io/instance: jumpserver
    app.kubernetes.io/version: "v4.3.1"
    app.kubernetes.io/managed-by: Helm
    app.jumpserver.org/name: jms-web
  annotations:
    null
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: web
      protocol: TCP
      name: web
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  selector:
    app.kubernetes.io/name: jumpserver
    app.kubernetes.io/instance: jumpserver
    app.jumpserver.org/name: jms-web
