bundle/01.jumpserver/render/jumpserver/templates/web/ingress.yaml
---
# Source: jumpserver/templates/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "jumpserver-ingress"
  labels:
    app.kubernetes.io/name: jumpserver
    helm.sh/chart: jumpserver-v4.3.1
    app.kubernetes.io/instance: jumpserver
    app.kubernetes.io/version: "v4.3.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 4096m
    nginx.ingress.kubernetes.io/server-snippets: |
      proxy_set_header Upgrade "websocket";
      proxy_set_header Connection "Upgrade";
spec:
  rules:
    - host: app.jumpserver.test
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: 'jumpserver-jms-web'
              port:
                number: 80
